[gd_scene load_steps=3 format=3 uid="uid://ed6kp21sf75h"]

[ext_resource type="Script" path="res://voucher_client.gd" id="1_e3707"]
[ext_resource type="PackedScene" uid="uid://u2h8kgq5523x" path="res://connect_wallet.tscn" id="2_5j3vv"]

[node name="VoucherClient" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e3707")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="ConnectWallet" parent="HBoxContainer" instance=ExtResource("2_5j3vv")]
layout_mode = 2

[node name="Refresh" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Refresh"

[node name="Events" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Vouchers" type="VBoxContainer" parent="Events"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Events/Vouchers"]
layout_mode = 2
text = "Vouchers
"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Events/Vouchers"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
auto_height = true

[node name="ExecuteVoucher" type="Button" parent="Events/Vouchers"]
layout_mode = 2
size_flags_horizontal = 4
text = "Execute Voucher"

[node name="ContractOutput" type="VBoxContainer" parent="Events"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Events/ContractOutput"]
layout_mode = 2
text = "Message Board Contract
"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Events/ContractOutput"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
auto_height = true

[node name="ViewInputs" type="Button" parent="Events/ContractOutput"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back To Inputs"

[connection signal="pressed" from="HBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Events/Vouchers/ExecuteVoucher" to="." method="_on_execute_voucher_pressed"]
[connection signal="pressed" from="Events/ContractOutput/ViewInputs" to="." method="_on_view_inputs_pressed"]
